--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.lrxh</groupId>
     <artifactId>BlockChanger</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
     <name>BlockChanger</name>
